# NumCSE

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
Assignments/Legacy/ode45/: CMakeLists.txt  ode45.py  ode45_old.hpp  ode45_old2.hpp  ode45_test.py
CMake/cxx_flags/linalg/: CMakeLists.txt
CppTutorial/: CMakeLists.txt  cppdemo.cpp  cpptutorial.cpp  fnrefinclass.cpp  fnvec.cpp  lambdacapture.cpp  lambdarecurse.cpp  lambdathis.cpp  lambdatransform.cpp  myvector.cpp  recorderdemo.cpp  recorderdemo.h  tietuple.cpp
FFT/Filter/: CMakeLists.txt  filter.cpp  freqs.eps  signal.eps
LectureCodes/: CMakeLists.txt  GetModules.cmake
LectureCodes/Clustering/cons_ad/: what
LectureCodes/Clustering/parentcode/: what
LectureCodes/Clustering/preprocess/: what
LectureCodes/Clustering/rec_con_ad/: what
LectureCodes/DenseLinearAlgebra/: CMakeLists.txt  main.cpp  main_cancel.cpp  main_cost.cpp
LectureCodes/EigenTutorial/: CMakeLists.txt  accesscolrow.cpp  blockaccess.cpp  blockinit.cpp  commainitialization.cpp  cyclicpermutation.cpp  eigenoptiming.cpp  eigenreductions.cpp  eigentypedemo.cpp  expressiontemplates.cpp  initdense.cpp  main.cpp  mapping.cpp  mapuse.cpp  matarray.cpp  plot_timings.py  storageorder.cpp
LectureCodes/EigenTutorial/temp/: arithPlot.eps  invertPlot.eps  plot.py  timing_info.txt  timings.txt
LectureCodes/Evp/: README.txt
LectureCodes/Evp/arnoldi/: what
LectureCodes/Evp/arnoldieig/: what
LectureCodes/Evp/arnoldievapprox/: what
LectureCodes/Evp/bridge/: what
LectureCodes/Evp/cluster/: what
LectureCodes/Evp/diodedata/: what
LectureCodes/Evp/dirpowmeth/: what
LectureCodes/Evp/dispimg/: what
LectureCodes/Evp/eigtiming/: what
LectureCodes/Evp/eigtimingmatrix/: what
LectureCodes/Evp/gse/: what
LectureCodes/Evp/gso/: what
LectureCodes/Evp/imgsegmat/: what
LectureCodes/Evp/kerncomp/: what
LectureCodes/Evp/kryleig/: what
LectureCodes/Evp/lanczos/: what
LectureCodes/Evp/lbd/: what
LectureCodes/Evp/lloydmax/: what
LectureCodes/Evp/maxeigval/: what
LectureCodes/Evp/niedrigrangbestapprox/: what
LectureCodes/Evp/pas/: what
LectureCodes/Evp/pcgbase/: CMakeLists.txt
LectureCodes/Evp/pinvitB/: what
LectureCodes/Evp/pm/: what
LectureCodes/Evp/prbuildA/: what
LectureCodes/Evp/prevp/: what
LectureCodes/Evp/prpowitsim/: what
LectureCodes/Evp/prstochsim/: what
LectureCodes/Evp/qr/: what
LectureCodes/Evp/rescirc/: what
LectureCodes/Evp/rqui/: what
LectureCodes/Evp/seg/: what
LectureCodes/Evp/spowit/: what
LectureCodes/Evp/sspowitdriver/: what
LectureCodes/Evp/sspowitstep/: what
LectureCodes/Evp/sspowitstepg/: what
LectureCodes/Evp/sspowitsteprp2/: what
LectureCodes/Evp/stockpca/: what
LectureCodes/Evp/svdpca/: what
LectureCodes/Evp/trussvib/: what
LectureCodes/Evp/utils/: eigensolversort.hpp  graphMarketMatrixLoader.hpp
LectureCodes/ExampleProject/: CMakeLists.txt  main.cpp
LectureCodes/Filtering/: CMakeLists.txt
LectureCodes/Filtering/cosinetransform/: what
LectureCodes/Filtering/fftbasedsolutionlocal/: what
LectureCodes/Filtering/lowpassfilter/: what
LectureCodes/Filtering/naivedft/: what
LectureCodes/Filtering/sinetransform2d/: what
LectureCodes/Filtering/sintransform/: what
LectureCodes/Filtering/sintransformwraparound/: what
LectureCodes/FilteringWavelets/fftcycliccong/: what
LectureCodes/FilteringWavelets/naivecyclicconv/: what
LectureCodes/FuncApproximation/: add_header.sh
LectureCodes/FuncApproximation/ChebInterp/: what
LectureCodes/FuncApproximation/chebexp/: what
LectureCodes/FuncApproximation/chebpolmult/: what
LectureCodes/FuncApproximation/chebpolplot/: what
LectureCodes/FuncApproximation/clenshaw/: what
LectureCodes/FuncApproximation/coeffortho/: what
LectureCodes/FuncApproximation/hermiteapprox/: what
LectureCodes/FuncApproximation/hermiteapprox1/: what
LectureCodes/FuncApproximation/recclenshaw/: what
LectureCodes/FuncApproximation/remes/: what
LectureCodes/FuncApproximation/rungeerr/: what
LectureCodes/FuncApproximation/splineapprox/: what
LectureCodes/FuncApproximation/splineapproxdriver/: what
LectureCodes/FuncApproximation/trigipequid/: what
LectureCodes/FuncApproximation/trigipequidcomp/: what
LectureCodes/FuncApproximation/trigiptiming/: what
LectureCodes/FuncApproximation/trigpolvalequid/: what
LectureCodes/FuncApproximation/trigpolycoeff/: what
LectureCodes/FuncApproximation/trigpolyval/: what
LectureCodes/FunctionCollection/: polyfit.hpp  polyval.hpp  timer.h
LectureCodes/Interpolation/: header.txt
LectureCodes/Interpolation/AitkenNeville/: what
LectureCodes/Interpolation/Bezier/: README.md
LectureCodes/Interpolation/DividedDifferences/: what
LectureCodes/Interpolation/DividedDifferencesEval/: what
LectureCodes/Interpolation/Horner/: what
LectureCodes/Interpolation/PolyEval/: pevalclass_singlepoints.hpp  pevalclass_updatefriendly.hpp  pevalclass_vectors.hpp
LectureCodes/Interpolation/PolyInterp/: what
LectureCodes/Interpolation/barycentricformula/: what
LectureCodes/Interpolation/cppfunction/: what
LectureCodes/Interpolation/cppinterpolant/: what
LectureCodes/Interpolation/diffex/: what
LectureCodes/Interpolation/hermintp1/: what
LectureCodes/Interpolation/hermloceval/: what
LectureCodes/Interpolation/intpolyval_lag/: what
LectureCodes/Interpolation/ipoleval/: what
LectureCodes/Interpolation/lebesgue/: what
LectureCodes/Interpolation/num_diff_fd/: what
LectureCodes/Interpolation/pchipslopes/: what
LectureCodes/Interpolation/pevaltime/: what
LectureCodes/Interpolation/polyevalimp/: what
LectureCodes/LeastSquares/: header.txt
LectureCodes/MatVecTimings/: CMakeLists.txt  main.cpp
LectureCodes/NewtonMethod/: CMakeLists.txt  main.cpp
LectureCodes/SparseLinearAlgebra/: CMakeLists.txt  main.cpp  sparsetiming.cpp
MathGL/CMakeExample/: CMakeLists.txt  main.cpp  mylibrary.cpp  mylibrary.hpp
MathGL/FigureClass/: CMakeLists.txt  figure.cpp  figure.hpp  main.cpp
OldExam/: CMakeLists.txt  problem1.cpp  problem3.cpp  problem4.cpp  problem5.cpp
(+4604 files in other folders)
