# message(WARNING "NCSE Eigen Tutorial is skipped currently!")
#add_executable (ncse_eigentutorial main.cpp)
add_executable_numcse (accesscolrow accesscolrow.cpp)
add_executable_numcse (blockaccess blockaccess.cpp)
add_executable_numcse (blockinit blockinit.cpp)
add_executable_numcse (eigentypedemo eigentypedemo.cpp)
add_executable_numcse (expressiontemplates expressiontemplates.cpp)
add_executable_numcse (initdense initdense.cpp)
add_executable_numcse (mapping mapping.cpp)
add_executable_numcse (matarray matarray.cpp)
add_executable_numcse (storageorder storageorder.cpp)